--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "gulp": "^3.9.1",
     "gulp-file-include": "^0.13.7",
     "gulp-sass": "^2.2.0"
+  },
+  "dependencies": {
+    "gulp-sass": "^2.2.0"
   }
 }
